# CRS_porr

./: CMakeLists.txt  README.txt  crs.out  main.cpp  porr.cbp  porr.depend  porr.layout
include/: algorithm.h  algorithms.h  constants.h  exercises.h
src/: algorithm.cpp  algorithms.cpp  exercises.cpp
